--- a/.gitignore
+++ b/.gitignore
@@ -157,4 +157,11 @@ cython_debug/
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+.idea/
+
+_00_data/*
+_00_data/data.zip
+_08_object_detection/YOLO/yolo_v1.tar
+
+*.tar
+data.zip
