--- a/.gitignore
+++ b/.gitignore
@@ -159,6 +159,7 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
 
+_00_data
 _00_data/*
 _00_data/data.zip
 _01_code/_10_object_detection/YOLO/yolo_v1.tar
@@ -173,7 +174,6 @@ wandb
 
 *.zip
 
-_01_code
 _03_your_code
 _04_homeworks_solution
 
